_assets/stylesheets/base.scss
////////// colors //////////

$blue:        rgb(3,168,171);
$yellow:      rgb(255,189,27);
$green:       rgb(2,125,17);
$orange:      #FF8B02;
$dark-orange: #ff5213;
$teal:        #006E72;
$pink:        #FD00FE;
$purple:      #BC50EA;
$dark-purple: #445588;
$dark-gray:   rgb(45,45,45);

////////// other variables //////////

$transition-duration: 0.3s;

////////// fonts //////////

@mixin embed-font($font-name, $font-filepath-and-name) {
  @font-face {
    font-family: $font-name;
      src: url(asset_path("fonts/"+$font-filepath-and-name+".eot")); /* IE9 Compat Modes */
      src: url(asset_path("fonts/"+$font-filepath-and-name+".eot?#iefix")) format('embedded-opentype'), /* IE6-IE8 */
           url(asset_path("fonts/"+$font-filepath-and-name+".woff")) format('woff'), /* Modern Browsers */
           url(asset_path("fonts/"+$font-filepath-and-name+".ttf"))  format('truetype'), /* Safari, Android, iOS */
           url(asset_path("fonts/"+$font-filepath-and-name+".svg#svgFontName")) format('svg'); /* Legacy iOS */
  }
}

@include embed-font("Graphik", "Graphik-Regular-Web");

////////// global mixins //////////

@mixin bg-fill-up($color) {
  -webkit-transition: background-position .3s linear;
  -moz-transition: background-position .3s linear;
  -o-transition: background-position .3s linear;
  transition: background-position .3s linear;

  @include background-image-gradient($color);
  @include background-size(100%, 210%);
  background-position: 0 -105%;
  background-repeat: repeat-x;

  &:hover {
    background-position: 0 0;

    a {
      color: $dark-gray;
    }
  }
}

@mixin bg-half-image-fill-up($color) {
  .text-content {
    -webkit-transition: background-position .3s linear;
    -moz-transition: background-position .3s linear;
    -o-transition: background-position .3s linear;
    transition: background-position .3s linear;

    @include background-image-gradient($color);
    @include background-size(100%, 210%);
    background-position: 0 -105%;
    background-repeat: repeat-x;
  }

  &:hover {
    .text-content {
      background-position: 0 0 !important;
    }

    a {
      color: $dark-gray !important;
    }
  }
}

@mixin bg-fallback($color) {
  background-position: 0 0;
  background: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");

  &:hover {
    background-color: $color;

    a {
      color: $dark-gray;
    }
  }
}

@mixin text-square($color) {
  a {
    -webkit-transition: color .8s linear;
    -moz-transition: color .8s linear;
    -o-transition: color .8s linear;
    transition: color .8s linear;
    color: $color;
  }
}

/// bg-hover mixins ///

@mixin background-image-gradient($color) {
  background-image: -webkit-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: -moz-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: -o-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: linear-gradient($color, $color 50%, transparent 50%, transparent);
}

@mixin background-size($width, $height) {
  -webkit-background-size: $width $height;
  -moz-background-size: $width $height;
  -o-background-size: $width $height;
  background-size: $width $height;
}

/// misc. helpers ///

@mixin word-wrap() {
  word-break:      break-word;
  -webkit-hyphens: auto;
  -moz-hyphens:    auto;
  hyphens:         auto;
}

@mixin set-colors-for-cta($color) {
  color: $color;
  .inline-icon:after {
    background-color: $color;
  }
}

////////// defaults //////////

html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p,
blockquote, pre, form, fieldset, table, th, td, canvas {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

body {
  background-color: $dark-gray;
  color: white;
  font-family: "Graphik";
  font-size: 112.5%; // 1em = 18px
}

#body {
  opacity: 0;
  -webkit-transition: opacity .5s ease;
  -moz-transition: opacity .5s ease;
  -o-transition: opacity .5s ease;
  transition: opacity .5s ease;
}

#loading {
  position: fixed;
  width: 60px;
  top: 50%;
  left: 50%;
  margin-top: -30px;
  margin-left: -30px;
  opacity: 1;
  -webkit-transition: opacity .5s ease;
  -moz-transition: opacity .5s ease;
  -o-transition: opacity .5s ease;
  transition: opacity .5s ease;
}

ul {
  list-style: none;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.15;
  margin-bottom: 1em;
}

p, pre {
  line-height: 1.4;
  margin-bottom: 1em;
}

h2 {
  font-size: 1.77em;
}

h3 {
  font-size: 1.5em;
}

canvas {
  position: absolute;
  z-index: -1;
  left: -2px;
  top: -2px;
}

.canvas {
  position: relative;
}

a {
  text-decoration: none;
  color: inherit;
}

.no-touch a {
  &:hover {
    text-decoration: underline;
  }
}

@media screen and (max-width:1024px) {
  .main-content {
    font-size: 80%;
  }
}

@media screen and (max-width:640px) {
  .main-content {
    font-size: 75%;
  }
}

////////// classes //////////

.main-content {
  margin: 4em auto 0;
  width: 1024px;
  max-width: 88%;
  padding-bottom: 2em;
}

////////// squares ///////////

.square {
  overflow: hidden;
  position: relative;

  .text-content {
    padding: 1.4em;

    h2 {
      margin-bottom: .25em;
    }
  }

  &.image {
    padding: 1px 0 0 1px;
  }

  &.text {
    &[data-color="blue"] {
      @include text-square($blue);
    }

    &[data-color="yellow"] {
      @include text-square($yellow);
    }

    &.half-image {
      .text-content {
        height: 50%;
      }

      .image-container {
        position: absolute;
        bottom: 1px;
        left: 1px;

        img {
          width: inherit;
          max-width: 100%;
          height: auto;
        }
      }
    }

    @media screen and (max-width:800px) {
      &.half-image {
        .supporting, br {
          display: none;
        }
      }
    }
  }
}

.no-touch .square {
  &.text[data-type="outlined"] {
    &[data-color="blue"] {
      &:not(.half-image) {
        @include bg-fill-up($blue);
      }

      &.half-image {
        @include bg-half-image-fill-up($blue);
      }
    }

    &[data-color="yellow"] {
      &:not(.half-image) {
        @include bg-fill-up($yellow);
      }

      &.half-image {
        @include bg-half-image-fill-up($yellow);
      }
    }

    &.half-image:hover {
      .text-content {
        background-position: 0 0 !important;
      }
    }
  }
}

.no-touch.no-csstransitions .square {
  &.text[data-type="outlined"] {
    &[data-color="blue"] {
      &:not(.half-image) {
        @include bg-fallback($blue);
      }

      &.half-image {
        .text-content {
          @include bg-fallback($blue);
        }
      }
    }

    &[data-color="yellow"] {
      &:not(.half-image) {
        @include bg-fallback($yellow);
      }

      &.half-image {
        .text-content {
          @include bg-fallback($yellow);
        }
      }
    }
  }
}

////////// small screen positioning reset //////////

@media screen and (max-width:640px) {
  .square.text, .square.image, #social-icons {
    margin: 0 !important;
    left: 0 !important;
    top: 0 !important;
  }

  .square.spacer {
    margin-bottom: 1.5em !important;
  }
}

////////// free text //////////

.free {
  a {
    color: $yellow;
  }

  &.text {
    padding-right: 1.5em;
    margin-top: 4em;

    &.first {
      margin-top: 1em;
    }
  }
}

////////// icons //////////

.square.icon {
  a {
    position: absolute;
    display: inline-block;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }

  object, img {
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 33%;
    pointer-events: none;
    display: inline-block;
    cursor: pointer;
  }

  &.target {
    object {
      width: 65%;
    }
  }
}

.no-touch .square.icon {
  @include bg-fill-up($green);
}

.no-touch.no-csstransitions .square.icon {
  @include bg-fallback($green);
}

.icon-container {
  position: relative;
}

#social-icons, #business-logos {
  overflow: visible;

  .phone {
    object {
      width: 20%;
    }
  }

  .obsub {
    object {
      width: 90%;
    }
  }

  .lighthouse {
    object {
      width: 80%;
    }
  }

  .ooda {
    img {
      width: 70%;
    }
  }

  .uhn {
    img {
      width: 50%;
    }
  }
}

////////// clearfix //////////

.clearfix:before, .clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

